# netzbremse-measurement

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.build.yml  docker-compose.yml  index.js  package-lock.json  package.json  results.txt
.github/workflows/: docker.yml
dashboard/: .dockerignore  Dockerfile  README.md  pyproject.toml
dashboard/.streamlit/: config.toml
dashboard/app/: app.py  charts.py  components.py  data_loader.py
